--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "url": "https://github.com/prerender/prerender"
   },
   "dependencies": {
+    "aws-sdk": "^2.176.0",
     "body-parser": "~1.18.2",
+    "cache-manager": "^2.6.0",
     "chrome-remote-interface": "~0.24.2",
     "compression": "~1.7.1",
     "express": "~4.16.2",
     "he": "~1.1.1",
+    "url": "^0.11.0",
     "valid-url": "~1.0.9"
   },
   "devDependencies": {
